--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,3 +24,10 @@ jobs:
       run: dotnet build ./Reference.Api/Reference.Api.csproj
     - name: Test
       run: dotnet test ./Reference.Api.Test/Reference.Api.Test.csproj
+
+  update-readme:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Add badge to README
+        run: echo "<img alt='Build passing' src='https://img.shields.io/badge/Build-passing-brightgreen'>" >> README.md
