--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+          dotnet-version: '8.0.x'
       - name: Test
         run: dotnet test ./Reference.Api.Test/Reference.Api.Test.csproj
 
