--- a/Reference.Api/appsettings.Docker.json
+++ b/Reference.Api/appsettings.Docker.json
@@ -14,14 +14,14 @@
       { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": { "serverUrl": "http://localhost:5341/" }
+        "Args": { "serverUrl": "http://host.docker.internal:5341/" }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithServiceName" ]
   },
 
   "Consul": {
-    "Host": "http://localhost:8500/"
+    "Host": "http://host.docker.internal:8500/"
   },
 
   "service": {
@@ -29,9 +29,9 @@
     "name": "Reference Api Service",
     "address": "127.0.0.1",
     "port": 7085,
-    "tags": ["referenceApi","service"],
+    "tags": [ "referenceApi", "service" ],
     "check": {
-      "http": "https://localhost:7085/health",
+      "http": "https://host.docker.internal:7085/health",
       "interval": "10s",
       "timeout": "1s"
     }
@@ -39,8 +39,8 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "postgresql": "User ID=postgres;Password=postgres;Host=localhost;Port=5433;Database=mydatabase;",
-    "redis": "localhost:6379"
+    "postgresql": "User ID=postgres;Password=postgres;Host=host.docker.internal;Port=5433;Database=mydatabase;",
+    "redis": "host.docker.internal:6379"
   },
 
   "Jwt": {
