--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         dotnet-version: '8.0.x'
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./Reference.Api/Reference.Api.csproj
     - name: Build
       run: dotnet build ./Reference.Api/Reference.Api.csproj
     
