elastich url added into appsettings files

--- a/Reference.Api/appsettings.Docker.json
+++ b/Reference.Api/appsettings.Docker.json
@@ -40,7 +40,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "postgresql": "User ID=postgres;Password=postgres;Host=host.docker.internal;Port=5433;Database=mydatabase;",
-    "redis": "host.docker.internal:6379"
+    "redis": "host.docker.internal:6379",
+    "elastic": "http://host.docker.internal:9200"
   },
 
   "Jwt": {
