--- a/Reference.Api/appsettings.json
+++ b/Reference.Api/appsettings.json
@@ -40,7 +40,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "postgresql": "User ID=postgres;Password=postgres;Host=localhost;Port=5433;Database=mydatabase;",
-    "redis": "localhost:6379"
+    "redis": "localhost:6379",
+    "elastic": "http://localhost:9200"
   },
 
   "Jwt": {
