user role feature added.

--- a/Reference.Api/Reference.Api.csproj
+++ b/Reference.Api/Reference.Api.csproj
@@ -54,6 +54,7 @@
     <None Remove="Security\" />
     <None Remove="MiddleWare\" />
     <None Remove="Migrations\" />
+    <None Remove="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -71,5 +72,6 @@
     <Folder Include="Security\" />
     <Folder Include="MiddleWare\" />
     <Folder Include="Migrations\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 </Project>
